--- a/index.html
+++ b/index.html
@@ -3,102 +3,108 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>teamrohitofficial45 web</title>
+<title>TEAMROHITOFFICIAL45 WEB</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
-/* ---------- THEME ---------- */
+/* ===== BASE ===== */
 body {
-  background: #000;
+  background:#000;
   font-family: Inter, system-ui, Arial, sans-serif;
-  color: #e5e7eb;
+  color:#e5e7eb;
 }
 
-/* Neon text */
-.neon {
-  color: #00ffff;
-  text-shadow: 0 0 8px #00ffff, 0 0 20px #00ffff;
+/* ===== NEON GOLD ===== */
+.neon-gold {
+  color:#FFD700;
+  text-shadow:
+    0 0 6px rgba(255,215,0,.6),
+    0 0 14px rgba(255,200,0,.7),
+    0 0 28px rgba(255,170,0,.8);
 }
 
-/* Cards */
+/* ===== SPLASH ===== */
+#splash {
+  position:fixed;
+  inset:0;
+  background:radial-gradient(circle,#0a0a0a,#000);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:100;
+  animation:splashOut 1s ease forwards;
+  animation-delay:3s;
+}
+@keyframes splashOut {
+  to { opacity:0; visibility:hidden; }
+}
+.fade-in {
+  animation:fadeInUp 1.6s ease forwards;
+}
+@keyframes fadeInUp {
+  from { opacity:0; transform:translateY(20px); }
+  to { opacity:1; transform:translateY(0); }
+}
+
+/* ===== CARDS ===== */
 .card {
-  width: 130px;
-  flex-shrink: 0;
+  width:130px;
+  flex-shrink:0;
 }
 .card img {
-  aspect-ratio: 16 / 9;
-  object-fit: contain;
-  background: #000;
+  aspect-ratio:16/9;
+  object-fit:contain;
+  background:#000;
+  transition:transform .3s ease;
 }
 .card:hover img {
-  transform: scale(1.05);
-}
-.card img {
-  transition: transform .3s ease;
+  transform:scale(1.05);
 }
 
-/* Rows */
+/* ===== ROW ===== */
 .row {
-  display: flex;
-  gap: 12px;
-  overflow-x: auto;
+  display:flex;
+  gap:12px;
+  overflow-x:auto;
 }
-.row::-webkit-scrollbar {
-  display: none;
-}
+.row::-webkit-scrollbar { display:none; }
 
-/* Desktop */
-@media (min-width: 768px) {
-  .card {
-    width: auto;
-  }
+/* ===== DESKTOP ===== */
+@media (min-width:768px) {
+  .card { width:auto; }
   .row {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
   }
-}
-
-/* ---------- SPLASH ---------- */
-#splash {
-  position: fixed;
-  inset: 0;
-  background: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 100;
-  animation: fadeOut 1s ease forwards;
-  animation-delay: 2.8s;
-}
-@keyframes fadeOut {
-  to { opacity: 0; visibility: hidden; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- SPLASH SCREEN -->
+<!-- ===== SPLASH SCREEN ===== -->
 <div id="splash">
-  <div class="text-center animate-pulse">
-    <p class="text-sm text-slate-400 mb-2">welcome to</p>
-    <p class="text-xl neon font-semibold tracking-wide">
-      teamrohitofficial45 web
+  <div class="text-center fade-in">
+    <p class="text-sm tracking-widest text-slate-400 mb-2">
+      WELCOME TO
+    </p>
+    <p class="text-xl neon-gold font-semibold tracking-wider">
+      TEAMROHITOFFICIAL45 WEB
     </p>
   </div>
 </div>
 
-<!-- HEADER -->
-<header class="sticky top-0 z-40 bg-black px-4 py-3 border-b border-cyan-500/30">
-  <h1 class="text-lg neon font-semibold mb-2">Live TV</h1>
+<!-- ===== HEADER ===== -->
+<header class="sticky top-0 z-40 bg-black px-4 py-3 border-b border-yellow-500/30">
+  <h1 class="text-lg neon-gold font-semibold mb-2">LIVE TV</h1>
   <input id="search"
-    placeholder="Search channels..."
+    placeholder="SEARCH CHANNELS..."
     class="w-full bg-zinc-900 text-white px-4 py-2 rounded-lg outline-none
-           focus:ring-2 focus:ring-cyan-400">
+           focus:ring-2 focus:ring-yellow-400">
 </header>
 
-<!-- CONTENT -->
+<!-- ===== CONTENT ===== -->
 <main id="content" class="space-y-10 py-6"></main>
 
 <script>
@@ -111,10 +117,10 @@ const search = document.getElementById("search");
 let channels = [];
 let activeCategory = null;
 
-/* LOAD */
+/* ===== LOAD ===== */
 fetch(M3U_URL).then(r=>r.text()).then(parseM3U);
 
-/* PARSE */
+/* ===== PARSE ===== */
 function parseM3U(data) {
   let ch = {};
   data.split("\n").forEach(line => {
@@ -137,25 +143,25 @@ function parseM3U(data) {
   renderSections(channels);
 }
 
-/* SECTION LOGIC */
+/* ===== SECTION LOGIC ===== */
 function sectionLogic(group, title) {
   title = title.toLowerCase();
-  if (group.includes("cricket") || title.includes("cricket")) return "Cricket";
-  if (group.includes("sport")) return "Sports";
-  if (group.includes("india")) return "Indian TV";
-  if (group.includes("movie")) return "Movies";
-  if (group.includes("news")) return "News";
-  if (group.includes("kids")) return "Kids";
-  if (group.includes("music")) return "Music";
-  if (group.includes("uk") || group.includes("usa")) return "International";
-  return "Other";
+  if (group.includes("cricket") || title.includes("cricket")) return "CRICKET";
+  if (group.includes("sport")) return "SPORTS";
+  if (group.includes("india")) return "INDIAN TV";
+  if (group.includes("movie")) return "MOVIES";
+  if (group.includes("news")) return "NEWS";
+  if (group.includes("kids")) return "KIDS";
+  if (group.includes("music")) return "MUSIC";
+  if (group.includes("uk") || group.includes("usa")) return "INTERNATIONAL";
+  return "OTHER";
 }
 
-/* RENDER */
+/* ===== RENDER ===== */
 function renderSections(list) {
   const sections = [
-    "Cricket","Sports","Indian TV","Movies",
-    "News","Kids","Music","International","Other"
+    "CRICKET","SPORTS","INDIAN TV","MOVIES",
+    "NEWS","KIDS","MUSIC","INTERNATIONAL","OTHER"
   ];
 
   content.innerHTML = "";
@@ -169,11 +175,11 @@ function renderSections(list) {
     content.innerHTML += `
       <section>
         <div class="px-4 mb-3 flex justify-between items-center">
-          <h2 class="text-base font-semibold text-cyan-300">${sec}</h2>
+          <h2 class="text-base font-semibold text-yellow-300">${sec}</h2>
           ${items.length > 12 ? `
             <button onclick="seeAll('${sec}')"
-              class="text-xs text-fuchsia-400 hover:underline">
-              see all
+              class="text-xs text-yellow-400 hover:underline">
+              SEE ALL
             </button>` : ""}
         </div>
         <div class="row px-4">
@@ -184,13 +190,13 @@ function renderSections(list) {
   });
 }
 
-/* SEE ALL */
+/* ===== SEE ALL ===== */
 function seeAll(cat) {
   activeCategory = cat;
   renderSections(channels);
 }
 
-/* SEARCH */
+/* ===== SEARCH ===== */
 search.addEventListener("input", () => {
   const q = search.value.toLowerCase();
   if (!q) {
@@ -203,14 +209,14 @@ search.addEventListener("input", () => {
   );
 });
 
-/* CARD */
+/* ===== CARD ===== */
 function card(ch) {
   return `
     <a href="${PLAYER + encodeURIComponent(ch.url)}"
        target="_blank"
        class="card">
       <div class="rounded-lg overflow-hidden bg-zinc-900 border
-                  border-cyan-500/20">
+                  border-yellow-500/20">
         <img src="${ch.logo}">
       </div>
       <p class="mt-1 text-xs truncate text-slate-200">${ch.title}</p>
